--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
 body{background-color: lightslategray;margin: 0%;}
-.navbar{position: fixed;border-style: none none groove none; width: 100%;background-color: rgb(80,80,80);}
+.navbar{position: fixed;border-style: none none groove none; 
+    width: 100%;background-color: rgb(80,80,80); 
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif}
+.navbar h1{padding-left: 5px;color: rgb(197, 191, 165); }
 #logo{height: 3%;width: 6%;}
+.navlinks{color:rgb(197,191,165);}
+.banner{border-style: hidden; width: 100%;height: 35%;margin: bottom 100px;padding: 50px 50px 50px 50px ;}
+.aboutus{width: 40%;background-color: rgb(197, 191, 165);border-style: none groove groove none;}
+.aboutus h3{text-align: center;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; padding-top: 5px;}
+.aboutus p{color: rgb(90,90,90);font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
